--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
 <head>
+    <title>project title</title>
 </head>
-<body>hello world</body>
+<body>
+    <h1>heading here</h1>
+    <p>now we start writing here</p>
+</body>
 </html>
