--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
 <head>
-    <title>project title</title>
+    <title>For learning</title>
 </head>
 <body>
-    <h1>heading here</h1>
-    <p>now we start writing here</p>
+    <h1 align="center" style="background-color:green;">Green University Bangladesh</h1>
+    <p>now we start writing here
+	<img src="pic\2nd.png"><>
+</p>
 </body>
 </html>
